--- a/index.html
+++ b/index.html
@@ -169,11 +169,20 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/7.jpg" title="Emirates">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/7.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/8.jpg" title="CurryBrand">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/8.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Emirates</div>
+                                <div class="project-name">CurryBrand</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/9.jpg" title="Insomnia Labs">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/9.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Insomnia Labs</div>
                             </div>
                         </a>
                     </div>
