--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Hiroshi's Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -41,6 +41,11 @@
                     <div class="align-self-end">
                         <h1 class="text-white font-weight-bold">Hello, I'm Hiroshi Yoshida</h1>
                         <hr class="divider" />
+                        <!-- <div> -->
+                            <a href="https://www.linkedin.com/in/hiroshi-yoshida">Linkedin </a>
+                            <a><a/>&nbsp;&nbsp;&nbsp;&nbsp;<a><a/>
+                            <a href="https://github.com/truelifedev">Github </a>
+                        <!-- </div> -->
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"></p>
