--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"></p>
-                        <a class="btn btn-primary btn-xl" href="#about">View my work</a>
+                        <a class="btn btn-primary btn-xl" href="#portfolio">View my work</a>
                     </div>
                 </div>
             </div>
